fix: image alignment

--- a/app/public/wp-content/themes/ecabs-theme/src/scss/pages/product-page.scss
+++ b/app/public/wp-content/themes/ecabs-theme/src/scss/pages/product-page.scss
@@ -30,6 +30,10 @@
             }
             .card-header {}
         }
+
+        .card-image-wrap {
+            img { margin: 0 auto; }
+        }
     
         .card-desc-wrap {
             display: flex;
